--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,181 @@
-/* место для вашего кода */
+.header {
+    display: grid;
+    grid-template-columns: 3fr 2fr 3fr;
+    min-width: 1440px;
+    min-height: 109px;
+    padding: 92px 49px 92px 51px;
+}
+
+.header__menu {
+    display: flex;
+    margin-top: auto;
+    margin-bottom: auto;
+    }
+
+.header__links-list {
+    display: flex;
+    column-gap: 32px;
+    list-style: circle;
+
+}
+
+.header__links-list-item {
+    list-style: circle;
+}
+
+.header__link {
+    color: #000;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    white-space: nowrap;
+    text-underline-offset: 5px;
+}
+
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+
+}
+
+.header__link_active {
+    text-decoration: none;
+}
+
+.header__logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 148px;
+    height: 105px;
+}
+
+.address {
+    color: #000;
+    align-self: end;
+    max-width: 240px;
+    line-height: 24.3px;
+    font-style: normal;
+    text-underline-offset: 4px;
+}
+
+.header__address  {
+    margin-left: auto;
+}
+
+.cover {
+    position: relative;
+    background-image: url(../images/cover.jpg);
+    min-height: 757px;
+    min-width: 1440px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 165px 50px 62px;
+    z-index: 0;
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    opacity: 0.6;
+    background: #000;
+    z-index: -1;
+}
+
+
+.cover__title {
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115px;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+    z-index: 1;
+}
+
+.aligned-text {
+    display: block;
+    z-index: 1;
+}
+
+.aligned-text_center {
+    text-align: center;
+    z-index: 1;
+}
+
+.aligned-text_right {
+    text-align: right;
+    z-index: 1;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0px;
+}
+
+.cover__description {
+    display: flex;
+    box-sizing: border-box;
+    justify-content: space-between;
+    min-width: 1440px;
+    min-height: 135px;
+    padding: 147px 110px 50px 370px;
+    align-items: center;
+    color: #FFF;
+}
+
+.cover__description-text {
+    text-align: center;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    text-transform: uppercase;
+    word-spacing: 20px;
+}
+
+.bet-button {
+    width: 257px;
+    height: 52px;
+    color: #FFF;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+    background-color: transparent;
+    border-color: #FFF;
+    border-width: 1px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.about__logo {
+    background-color: #000;
+    width: 430px;
+    border-radius: 60%;
+}
+
+.footer__social-list {
+    width: 240px;
+    height: 48px;
+}
