--- a/styles/style.css
+++ b/styles/style.css
@@ -3,20 +3,17 @@
     grid-template-columns: 3fr 2fr 3fr;
     min-width: 1440px;
     min-height: 109px;
-    padding: 92px 49px 92px 51px;
+    padding: 92px 49px 95px 51px;
 }
 
 .header__menu {
     display: flex;
-    margin-top: auto;
-    margin-bottom: auto;
-    }
+    align-self: center;
+}
 
 .header__links-list {
     display: flex;
-    column-gap: 32px;
-    list-style: circle;
-
+    column-gap: 33px;
 }
 
 .header__links-list-item {
@@ -45,22 +42,32 @@
 
 .header__logo {
     display: block;
+    align-self: center;
     margin-left: auto;
     margin-right: auto;
     width: 148px;
     height: 105px;
 }
 
+.header__logo-image {
+    width: 100%;
+    height: 100%;
+}
+
 .address {
     color: #000;
     align-self: end;
     max-width: 240px;
-    line-height: 24.3px;
+    font-family: Raleway;
+    font-size: 18px;
     font-style: normal;
+    font-weight: 400;
+    line-height: 24.3px;
     text-underline-offset: 4px;
 }
 
 .header__address  {
+    align-self: center;
     margin-left: auto;
 }
 
@@ -72,7 +79,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding: 165px 50px 62px;
     z-index: 0;
 }
 
@@ -86,6 +92,7 @@
 
 
 .cover__title {
+    padding: 165px 50px 0px;
     color: #FFF;
     font-family: Raleway;
     font-size: 100px;
@@ -104,6 +111,8 @@
 
 .aligned-text_center {
     text-align: center;
+    padding-top: 11px;
+    padding-bottom: 6px;
     z-index: 1;
 }
 
@@ -122,11 +131,10 @@
 
 .cover__description {
     display: flex;
-    box-sizing: border-box;
     justify-content: space-between;
     min-width: 1440px;
     min-height: 135px;
-    padding: 147px 110px 50px 370px;
+    padding: 128px 50px 0px 422px;
     align-items: center;
     color: #FFF;
 }
@@ -139,7 +147,7 @@
     font-weight: 400;
     line-height: 28px;
     text-transform: uppercase;
-    word-spacing: 20px;
+    word-spacing: 18px;
 }
 
 .bet-button {
@@ -158,24 +166,220 @@
     border-width: 1px;
 }
 
+.lots {
+    min-height: 570px;
+    min-width: 1340px;
+    padding: 180px 50px;
+    background-color: #FFF;
+    z-index: 0;
+    ;
+}
 
+.lots__heading {
+    color: #000;
+    font-family: Raleway;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    padding: 0px 1170px 27px 40px;
+}
 
+.lots__card-list {
+    display: flex;
+    min-width: 1340px;
+    gap: 0px 25px;
+    list-style: none;
+    flex-grow: 1;
+}
 
+.lots__card-list-item {
+    position: relative;
+    flex-grow: 1;
+    z-index: 0;
+}
 
+.card-link {
+    display: block;
+    text-decoration: none;
+    height: 450px;
+    width: 430px;
+}
 
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+}
 
+.card_type_film {
+    position: relative;
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: -2;
+}
 
+.card_type_book {
+    position: relative;
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: -2;
+}
 
+.card_type_picture {
+    position: relative;
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: -2;
+}
 
+.card__title {
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%; /* 26.4px */
+    text-decoration-line: underline;
+    text-underline-offset: 3px;
+    text-transform: uppercase;
+    padding-top: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
 
+.card__text {
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 24px */
+    padding-bottom: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.lots__look-more-link {
+    display: block;
+    margin: 30px 1108px 0px 40px;
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+    text-underline-offset: 5px;
+}
+
+.about {
+    display: grid;
+    justify-items: center;
+    align-items: start;
+    grid-template-columns: 430px 2fr;
+    column-gap: 25px;
+    min-width: 1440px;
+    min-height: 487px;
+    padding: 0px 50px;
+}
+
+.about__column {
+    display: grid;
+    place-content: center;
+    row-gap: 25px;
+}
 
 .about__logo {
     background-color: #000;
-    width: 430px;
-    border-radius: 60%;
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+}
+
+.about__logo-image  {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title  {
+    color: #000;
+    font-family: Raleway;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+    padding-top: 100px;
+    padding-bottom: 75px;
+    
+}
+
+.about__text {
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-between;
+    padding: 181px 50px 92px 50px;
+}
+
+.footer__menu {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+}
+
+.footer__menu-list-item {
+    text-underline-offset: 4px;
+}
+
+.footer__menu-link {
+    color: #000;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
 }
 
 .footer__social-list {
+    justify-self: end;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
     width: 240px;
     height: 48px;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;    
 }
