--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,6 @@
 .header {
     display: grid;
     grid-template-columns: 3fr 2fr 3fr;
-    min-width: 1440px;
-    min-height: 109px;
     padding: 92px 49px 95px 51px;
 }
 
@@ -56,18 +54,19 @@
 
 .address {
     color: #000;
-    align-self: end;
     max-width: 240px;
-    font-family: Raleway;
+    max-height: 49px;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 24.3px;
-    text-underline-offset: 4px;
+    text-underline-offset: 5px;
 }
 
 .header__address  {
-    align-self: center;
+    padding: 5px 0 0 0;
+    align-self: start;
     margin-left: auto;
 }
 
@@ -79,7 +78,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    z-index: 0;
+    z-index: 1;
 }
 
 .overlay {
@@ -94,7 +93,7 @@
 .cover__title {
     padding: 165px 50px 0px;
     color: #FFF;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 100px;
     font-style: normal;
     font-weight: 700;
@@ -126,14 +125,12 @@
 }
 
 .no-letter-spacing {
-    letter-spacing: 0px;
+    letter-spacing: 0;
 }
 
 .cover__description {
     display: flex;
     justify-content: space-between;
-    min-width: 1440px;
-    min-height: 135px;
     padding: 128px 50px 0px 422px;
     align-items: center;
     color: #FFF;
@@ -141,7 +138,7 @@
 
 .cover__description-text {
     text-align: center;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -151,11 +148,10 @@
 }
 
 .bet-button {
-    width: 257px;
-    height: 52px;
+    padding: 12px 32px;
     color: #FFF;
     text-align: center;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -167,48 +163,50 @@
 }
 
 .lots {
-    min-height: 570px;
-    min-width: 1340px;
+    display: grid;
     padding: 180px 50px;
     background-color: #FFF;
-    z-index: 0;
-    ;
+    z-index: 1;
 }
 
 .lots__heading {
+    place-self: start;
+    padding: 0 0 27px 40px;
     color: #000;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    padding: 0px 1170px 27px 40px;
 }
 
 .lots__card-list {
     display: flex;
+    flex-wrap: wrap;
     min-width: 1340px;
-    gap: 0px 25px;
+    gap: 25px 25px;
     list-style: none;
     flex-grow: 1;
 }
 
 .lots__card-list-item {
+    display: flex;
     position: relative;
     flex-grow: 1;
-    z-index: 0;
+    z-index: 1;
 }
 
 .card-link {
     display: block;
     text-decoration: none;
-    height: 450px;
+    min-height: 450px;
     width: 430px;
 }
 
 .card {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
@@ -216,35 +214,32 @@
 }
 
 .card_type_film {
-    position: relative;
     background-image: url(../images/card-lot-01.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    z-index: -2;
+    z-index: 1;
 }
 
 .card_type_book {
-    position: relative;
     background-image: url(../images/card-lot-02.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    z-index: -2;
+    z-index: 1;
 }
 
 .card_type_picture {
-    position: relative;
     background-image: url(../images/card-lot-03.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    z-index: -2;
+    z-index: 1;
 }
 
 .card__title {
     color: #FFF;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 700;
@@ -259,7 +254,7 @@
 
 .card__text {
     color: #FFF;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -270,10 +265,10 @@
 }
 
 .lots__look-more-link {
-    display: block;
-    margin: 30px 1108px 0px 40px;
+    place-self: start;
+    padding: 30px 0 0 40px;
     color: #000;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -289,7 +284,6 @@
     grid-template-columns: 430px 2fr;
     column-gap: 25px;
     min-width: 1440px;
-    min-height: 487px;
     padding: 0px 50px;
 }
 
@@ -313,7 +307,7 @@
 
 .about__title  {
     color: #000;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -326,7 +320,7 @@
 
 .about__text {
     color: #000;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -359,7 +353,7 @@
 .footer__menu-link {
     color: #000;
     text-align: center;
-    font-family: Raleway;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -373,10 +367,8 @@
 .footer__social-list {
     justify-self: end;
     display: flex;
-    justify-content: space-between;
+    gap: 48px;
     list-style: none;
-    width: 240px;
-    height: 48px;
 }
 
 .footer__social-icon {
